# claude-lametric

./: .gitignore  README.md  config.example.toml  hooks.example.json  pyproject.toml
src/claude_lametric/: __init__.py  cli.py  client.py  config.py  frames.py  hook.py  state.py  usage.py
tests/: test_core.py
