[project]
name = "claude-lametric"
version = "0.1.0"
description = "Display Claude Code status, notifications, and token usage on a LaMetric Time"
requires-python = ">=3.12"
dependencies = []  # stdlib only (urllib + tomllib) so hooks never break on a missing import

[project.scripts]
claude-lametric = "claude_lametric.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_lametric"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
